Added darkmode script

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <p>📍 Tidaholm, Sweden | 📧 <a href="mailto:your.email@example.com">j.svan76@gmail.com</a></p>
         <p>🔗 <a href="https://www.linkedin.com/in/joakim-svan-3660a3218" target="_blank">LinkedIn</a> | 
             <a href="https://github.com/Jocke44" target="_blank">GitHub</a></p>
+         
+            <!-- Dark Mode Toggle -->
+    <button id="dark-mode-toggle">🌙 Dark Mode</button>    
     </header>
 
     <section>
@@ -52,34 +55,36 @@
         <h2>Utbildning & Kurser</h2>
         <ul><h3>Zero to Mastery Academy</h3>
             <ul>
-                <li><strong>Zero to Mastery Academy</strong> - Prompt Engineering (In Progress)</li>
-                <li><strong>Zero to Mastery Academy</strong> - SQL & Database Bootcamp (In Progress)</li>
+                <li><strong>Zero to Mastery Academy</strong> - Prompt Engineering (Pågående)</li>
+                <li><strong>Zero to Mastery Academy</strong> - SQL & Database Bootcamp (Pågående)</li>
             </ul>
         </ul>
     </section>
 
     <section>
-        <h2>Skills</h2>
+        <h2>Kompetenser</h2>
         <ul>
-            <li>SQL & Database Management</li>
-            <li>Prompt Engineering</li>
+            <li>SQL & Database Management (pågånde)</li>
+            <li>Prompt Engineering (pågånde)</li>
             <li>Warehouse & Logistics Management</li>
-            <li>Swedish (Native), English (Fluent)</li>
+            <li>Svenksa (Modersmål), Engelska (Flytande)</li>
         </ul>
     </section>
 
     <section>
-        <h2>Hobbies & Interests</h2>
+        <h2>Intressen</h2>
         <ul>
-            <li>Computers & Technology</li>
-            <li>Clay Target Shooting</li>
-            <li>Fishing</li>
+            <li>Datorer och Teknik</li>
+            <li>Lerduveskytte</li>
+            <li>Fiske</li>
         </ul>
     </section>
 
     <footer>
         <p>📄 <a href="cv.pdf" download>Download CV (PDF)</a></p>
-        <p>&copy; 2024 Joakim Svan</p>
+        <p>&copy; 2025 Joakim Svan</p>
     </footer>
+    
+    <script src="script.js"></script>
 </body>
 </html>
