Changed cv.pdf to Cv.pdf in href

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <footer>
-        <p>📄 <a href="cv.pdf" download>Download CV (PDF)</a></p>
+        <p>📄 <a href="Cv.pdf" download>Download CV (PDF)</a></p>
         <p>&copy; 2025 Joakim Svan</p>
     </footer>
     
