updated text to swedish

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <section>
         <h2>Kompetenser</h2>
         <ul>
+            <li>Lager & Godsmottagning</li>
             <li>SQL & Database Management (pågånde)</li>
             <li>Prompt Engineering (pågånde)</li>
-            <li>Warehouse & Logistics Management</li>
             <li>Svenksa (Modersmål), Engelska (Flytande)</li>
         </ul>
     </section>
